Stop swipe-to-delete when entering selection mode (new iOS bookmark ui)

When entering selection mode (edit mode), dismiss the swipe-to-delete
confirmation button if it is showing up.  An egtest is added to prevent
this bug from happening again.

Demo: https://drive.google.com/file/d/0B1dtd3IUt4I7bTZhcDdNOU5faFU/view

Bug: 768810
Change-Id: I9ff11ae68f6cc9345f2417f0a66fcaa927231bb3
Reviewed-on: https://chromium-review.googlesource.com/711514
Commit-Queue: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507973}
Former-commit-id: 02ea1e777049465c099af01fbc2549bce2afb911